--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -73,6 +73,31 @@ p {
   margin: 30px;
 }
 
+.content-container {
+  padding: 160 px 20px;
+}
+
+.contents h1 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0 0;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -110,6 +135,11 @@ p {
   }
 
   .about-section {
+    text-align: center;
+    padding: 0;
+  }
+
+  .content {
     text-align: center;
     padding: 0;
   }
